[package]
name = "varust"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
axum = {version = "0.7.4", features = ["ws"]}
axum-extra = {version = "0.4.2", features = ["spa"]}
chrono = { version = "0.4.37", features = ["serde"] }
hyper = { version = "1.2.0", features = ["client", "http2"] }
hyper-tls = "0.6.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
shuttle-axum = "0.43.0"
shuttle-runtime = "0.43.0"
shuttle-secrets = "0.42.0"
shuttle-static-folder = "0.28.0"
sync_wrapper = "1.0.1"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "auth"] }
futures-util = "0.3.30"
axum-macros = "0.4.1"
futures = "0.3.30"
tracing = "0.1.40"
